try fix dark mode

--- a/src/components/daycontainer/DayContainer.css
+++ b/src/components/daycontainer/DayContainer.css
@@ -1,5 +1,6 @@
 
 :root {
+  color-scheme: light dark;
   --ColorBorder1: #959595;
   --ColorBorder: #616161;
   --DayBackground: #232323;
