--- a/src/components/weekselector/WeekSelector.css
+++ b/src/components/weekselector/WeekSelector.css
@@ -1,5 +1,7 @@
 :root {
   --weekHeight: 11vh;
+  color-scheme: light dark; /* both supported */
+  
 }
 
 .main-page{
